processed images for vit

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ fake/
 # ignore the real_processed and fake_processed folders
 real_processed/
 fake_processed/
+
+# ignore the real_vit and fake_vit folders
+real_vit/
+fake_vit/
