--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
+backend/models/vit_model.pth filter=lfs diff=lfs merge=lfs -text
 backend/models/hybrid_vit_xception_model.keras filter=lfs diff=lfs merge=lfs -text
